auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etas-auth
  labels:
    app: etas-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etas-auth
  template:
    metadata:
      labels:
        app: etas-auth
    spec:
      containers:
        - name: etas-auth
          image: sharonpraju/etas-auth-micro
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: etas-auth-service
spec:
  ports:
    - targetPort: 3000
      port: 3000
  selector:
    app: etas-auth
