category.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etas-category
  labels:
    app: etas-category
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etas-category
  template:
    metadata:
      labels:
        app: etas-category
    spec:
      containers:
        - name: etas-category
          image: sharonpraju/etas-category-micro1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: etas-category-service
spec:
  ports:
    - targetPort: 3000
      port: 3000
  selector:
    app: etas-category
