expense.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etas-expense
  labels:
    app: etas-expense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etas-expense
  template:
    metadata:
      labels:
        app: etas-expense
    spec:
      containers:
        - name: etas-expense
          image: sharonpraju/etas-expense-micro
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: etas-expense-service
spec:
  ports:
    - targetPort: 3000
      port: 3000
  selector:
    app: etas-expense
