user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etas-user
  labels:
    app: etas-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etas-user
  template:
    metadata:
      labels:
        app: etas-user
    spec:
      containers:
        - name: etas-user
          image: sharonpraju/etas-user-micro
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: etas-user-service
spec:
  ports:
    - targetPort: 3000
      port: 3000
  selector:
    app: etas-user
